--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+###############
+#### macOS ####
+###############
+
 # General
 .DS_Store
 .AppleDouble
@@ -5,7 +9,6 @@
 
 # Icon must end with two \r
 Icon
-
 
 # Thumbnails
 ._*
@@ -25,3 +28,17 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+##############
+### VSCode ###
+##############
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
